@@ -4,6 +4,8 @@ v0.10.0 (WIP):
         From this point ed::EndCreate() and ed::EndDelete() can only be called when
         ed::BeginCreate() and ed::BeginDelete() calls were successful.
 
+    NEW: Canvas: Add example of zooming at fixed point (#270)
+
     CHANGE: Canvas: Use ImDrawCallback_ImCanvas macro as draw callback sentinel (#256), thanks @nspitko
 
     BUGFIX: Examples: Call ed::EndCreate() and ed::EndDelete() only when ed::BeginCreate() and ed::BeginDelete() returned true
